# HARE

./: LICENSE  README.md
ml-pipeline/: .gitignore  README.md  environment.yml  pyproject.toml
ml-pipeline/src/: main.py  wb_runner.py
ml-pipeline/src/evaluation/: evaluator.py
ml-pipeline/src/generators/: RandomGenerator.py  __init__.py
ml-pipeline/src/loading/: Preprocessor.py  XSensRecordingReader.py  XSensRecordingReaderOld.py  cache_recording.py  load_dataset.py  load_dataset_single_act.py  load_opportunity_dataset.py  load_uci_har_dataset.py
ml-pipeline/src/models/: DeepConvLSTMModel.py  JensModel.py  ModelBuilder.py  MultiWindowModel.py  RainbowModel.py  ResNetModel.py  __init__.py
ml-pipeline/src/preprocessing/: __init__.py  dataset.py  filtering.py  interpolation.py  normalization.py  preprocessor.py  smoothing.py  splitting.py  splitting_jens.py
ml-pipeline/src/scripts/: train_model.py  train_model_configurable.py
ml-pipeline/src/sonar_types/: EvaluationFunction.py  PreprocessingFunction.py  Recording.py  SensorFrame.py  Window.py  __init__.py
ml-pipeline/src/training_utils/: class_weight.py
ml-pipeline/src/utils/: __init__.py  config.py  count.py  filter_activities.py  logger.py  map_activities.py  mappings.py  path_helpers.py  wandb.py
ml-pipeline/src/visualization/: plot_2d.py  plot_distribution.py
multimodal/: README.md  multimodal.ipynb  pose_sequence_archive.ipynb  pose_sequence_loader.py  runner.py
tflite/: README.md  tflite_example.ipynb
tflite-export/: .gitignore  LICENSE  README.md  conda_thesis_env.txt
(+157 files in other folders)
